refreshed/styles/screen/small.less
@import 'variables';
@import 'mixins-private';
@import 'mixins-public';

.mixin-small-layout-styles( {
	/*****************************************************************************
	*************************** DROPDOWNS/COLLAPSIBLES ***************************
	*****************************************************************************/

	.refreshed-dropdown-tray {
		left: 0;
		right: 0;
		font-size: @small-dropdown-tray-sidebar-font-size;
	}

	#user-info-dropdown-tray {
		right: 0;
	}

	/*****************************************************************************
	*********************************** HEADER ***********************************
	*****************************************************************************/

	body {
		overflow-x: hidden;
	}

	#site-navigation-header .site-navigation-full-logos {
		display: none;
	}

	#header-categories-user-info-search-wrapper {
		.flex-direction( row-reverse );
	}

	#explore-header-categories {
		display: none;
	}

	#user-info-dropdown-button {
		.refreshed-username,
		.refreshed-icon-refreshed-dropdown-expand {
			display: none;
		}
	}

	/* if you want to change this to -inline, you need to also change the
	definition of .mixin-set-sidebar-width-small-layout in mixins.css */
	.mixin-use-sidebar-menu();

	.mixin-use-searchInput-menu( @small-header-search-width, 0 );

	/*****************************************************************************
	*********************************** SIDEBAR **********************************
	*****************************************************************************/

	#sidebar-wrapper {
		font-size: @small-dropdown-tray-sidebar-font-size;
	}

	/*****************************************************************************
	*********************************** CONTENT **********************************
	*****************************************************************************/

	#content-heading {
		text-align: center;
	}

	.mw-indicators {
		float: none;
		text-align: right;
	}

	/* toolbox */

	#refreshed-toolbox {
		font-size: 1.25em;
		/* allow horizontal scrolling if needed */
		overflow-x: auto;
	}

	#p-namespaces .ca-subject { /* #p-namespaces for specificity */
		display: none;
	}

	.selected#ca-talk {
		display: none;
	}

	.inline-tool-text {
		display: none;
	}

	.p-views > a,
	.combined-tools-dropdown {
		margin-left: 0.75em;
	}

	#toolbox-dropdown-tray {
		/* don't use the larger font-size that the rest of #refreshed-toolbox uses */
		font-size: inherit;
	}

	/* whitelist page indicators */
	.mw-indicator {
		display: none;
	}

	#toc {
		font-size: 1.25em;
		line-height: 1.2em;
		width: 100%;
		.box-sizing( border-box );
	}

	#catlinks {
		text-align: center;
		font-size: 1.2em;
	}

	/* Image thumbnails */
	.thumb {
		width: 100% !important;
		margin: 0 !important;
		text-align: center;
	}

	div.thumbinner { /* need to specify div so it can overwrite the CSS in commonContent.css */
		width: 50% !important;
		padding: 0.75em 0 !important;
		margin-bottom: 0.5em;
		display: inline-block;
	}

	.thumbinner img {
		width: 100%;
		height: auto;
		border: 0 !important;
	}

	.thumbcaption {
		text-align: center !important;
		margin-bottom: -.75em !important;
	}

	.magnify {
		display: none;
	}

	/* Increase font size for editing menu - Brickimedia/brickimedia#301 */
	.action-edit input[type="text"],
	.action-edit input[type="number"],
	.action-edit textarea {
		font-size: 1.063em;
	}

	/*****************************************************************************
	*********************************** FOOTER ***********************************
	*****************************************************************************/

	#footer-wrapper {
		text-align: center;
		font-size: 1.2em;
	}

	.footer-row-item {
		margin-left: @footer-item-spacing-horizontal / 2;
		margin-right: @footer-item-spacing-horizontal / 2;
	}
} );

